# type-bridge

./: ABSTRACT_API.md  ATTRIBUTE_API.md  CHANGELOG.md  CLAUDE.md  README.md  check.sh  docker-compose.yml  performance_analysis.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ATTRIBUTE_API.md  DEVELOPMENT.md  INTERNALS.md  TESTING.md  TYPEDB.md
docs/api/: README.md  abstract_types.md  attributes.md  cardinality.md  crud.md  entities.md  generator.md  queries.md  relations.md  schema.md  validation.md
examples/: README.md  base_flag_demo.py  basic_usage.py  edge_case_demo.py  literal_types.py  manager_syntax.py  pydantic_features.py  schema_manager_usage.py  type_safety_demo.py
examples/advanced/: attribute_typename_case.py  implicit_flags.py  pydantic_features.py  query_expressions.py  schema_01_manager.py  schema_02_comparison.py  schema_03_conflict.py  string_representation.py  type_safety.py  typename_case.py
examples/basic/: crud.py  crud_01_define.py  crud_02_insert.py  crud_03_read.py  crud_04_update.py  crud_07_delete.py  crud_08_put.py
tests/: test_basic.py  test_crud_operations.py  test_date.py  test_literal_support.py  test_pydantic_integration.py
tests/integration/: README.md  conftest.py  test_crud_workflows.py  test_query_building.py  test_schema_operations.py
type_bridge/: __init__.py  attribute.py  crud.py  fields.py  models.py  models.pyi  query.py  schema.py  session.py  validation.py
type_bridge/attribute/: __init__.py  base.py  flags.py
type_bridge/crud/: __init__.py  exceptions.py
type_bridge/expressions/: __init__.py  (+4 more)
(+75 files in other folders)
