[project]
name = "type-bridge"
version = "0.1.0"
description = "Orm for typedb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typedb-driver==3.5.5",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N802",  # Function name should be lowercase (intentional for field functions like String, Long)
    "E501",  # Line too long (some docstrings and complex expressions)
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["F841"]  # Allow unused variables in examples for demonstration
"tests/*.py" = ["F841"]  # Allow unused variables in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
